--- a/roster.html
+++ b/roster.html
@@ -79,17 +79,17 @@
                  <div class="card">
                     <img src="images/logo.png" alt="kosti_player">
                     <h2 class="card-text text-xl text-center">#39 <span class="text-primary">Kkostiii</span></h2>
-                    <p class="text-center">Santeri Kostiainen</p>
+                    <p class="text-center">Santeri Kostiainen <img id="nationality" src="images/finland.png" alt="finland"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="simba_player">
                     <h2 class="card-text text-xl text-center">#82 <span class="text-primary">Simbanho</span></h2>
-                    <p class="text-center">Simeon Vorselman</p>
+                    <p class="text-center">Simeon Vorselman <img id="nationality" src="images/finland.png" alt="finland"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="eagle_player">
                     <h2 class="card-text text-xl text-center">#96 <span class="text-primary">I-THE_EAGLE-I</span></h2>
-                    <p class="text-center">Sandro Wüller</p>
+                    <p class="text-center">Sandro Wüller <img id="nationality" src="images/germany.png" alt="germany"></p>
                  </div>
             </div>
             <h2 class="roster-header text-xl text-center text-light">Defenseman</h2>
@@ -97,17 +97,17 @@
                  <div class="card">
                     <img src="images/logo.png" alt="tonee_player">
                     <h2 class="card-text text-xl text-center">#9 <span class="text-primary">Toneee9 (C)</span></h2>
-                    <p class="text-center">Max Tonitz</p>
+                    <p class="text-center">Max Tonitz<img id="nationality" src="images/austria.png" alt="austria"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="kuru_player">
                     <h2 class="card-text text-xl text-center">#53 <span class="text-primary">Anhel_Kuru</span></h2>
-                    <p class="text-center">Antti Kuru</p>
+                    <p class="text-center">Antti Kuru <img id="nationality" src="images/finland.png" alt="finland"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="psyko_player">
                     <h2 class="card-text text-xl text-center">#63 <span class="text-primary">xPsykoSkills</span></h2>
-                    <p class="text-center">Niklas Schmitz</p>
+                    <p class="text-center">Niklas Schmitz <img id="nationality" src="images/germany.png" alt="germany"></p>
                  </div>
             </div>
             <h2 class="roster-header text-xl text-center text-light">Forwards</h2>
@@ -115,17 +115,17 @@
                  <div class="card">
                     <img src="images/logo.png" alt="kermit_player">
                     <h2 class="card-text text-xl text-center">#29 <span class="text-primary">Keuschemisch (A)</span></h2>
-                    <p class="text-center">Kevin Berg</p>
+                    <p class="text-center">Kevin Berg <img id="nationality" src="images/germany.png" alt="germany"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="villain_player">
                     <h2 class="card-text text-xl text-center">#45 <span class="text-primary">GERxVillain</span></h2>
-                    <p class="text-center">Chris Ungeheuer</p>
+                    <p class="text-center">Chris Ungeheuer <img id="nationality" src="images/germany.png" alt="germany"></p>
                  </div>
                  <div class="card">
                     <img src="images/logo.png" alt="tim_player">
                     <h2 class="card-text text-xl text-center">#84 <span class="text-primary">Timasy (A)</span></h2>
-                    <p class="text-center">Tim Hess</p>
+                    <p class="text-center">Tim Hess <img id="nationality" src="images/germany.png" alt="germany"></p>
                  </div>
         </div>
 
