added home button in mobile menu

--- a/index.html
+++ b/index.html
@@ -47,6 +47,9 @@
              <div class="mobile-menu">
                 <ul>
                     <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
                         <a href="roster.html">Roster</a>
                     </li>
                     <li>
