--- a/roster.html
+++ b/roster.html
@@ -43,6 +43,10 @@
              <div class="mobile-menu">
                 <ul>
                     <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                    <li>
                         <a href="roster.html">Roster</a>
                     </li>
                     <li>
