made changes to achievements page

--- a/achievements.html
+++ b/achievements.html
@@ -7,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <div class="navbar">
+    <nav class="navbar">
         <div class="container">
             <div class="logo">
                 <a href="index.html">
@@ -18,7 +18,7 @@
             <div class="main-menu">
                 <ul>
                     <li>
-                        <a href="index.html">Roster</a>
+                        <a href="roster.html">Roster</a>
                     </li>
                     <li>
                         <a href="#">News</a>
@@ -32,14 +32,39 @@
 
                 </ul>
             </div>
-        </div>
-    </div>
-    <h1> hello</h1>
+            <!-- Hamburger icon and mobile menu-->
+             <button id="hamburger-button" class="hamburger-button">
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+                <div class="hamburger-line"></div>
+             </button>
+             <div class="mobile-menu">
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                    <li>
+                        <a href="roster.html">Roster</a>
+                    </li>
+                    <li>
+                        <a href="#">News</a>
+                    </li>
+                    <li>
+                        <a href="achievements.html">Achievements</a>
+                    </li>
+                    <li>
+                        <a href="#">Contact Us</a>
+                    </li>
 
-    <div class="celebration">
-        <a href="index.html">
-            <img src="images/celebration.png">
-        </a>
-    </div>
+                </ul>
+
+             </div>
+        </div>
+    </nav>
+
+    
+
+   
 </body>
 </html>
