--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                         <a href="roster.html">Roster</a>
                     </li>
                     <li>
-                        <a href="#">News</a>
+                        <a href="news.html">News</a>
                     </li>
                     <li>
                         <a href="achievements.html">Achievements</a>
@@ -53,7 +53,7 @@
                         <a href="roster.html">Roster</a>
                     </li>
                     <li>
-                        <a href="#">News</a>
+                        <a href="news.html">News</a>
                     </li>
                     <li>
                         <a href="achievements.html">Achievements</a>
