slight updates on the footer etc

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                     You just entered to The Black Jacks zone
                 </h1>
                 <p class="hero-text">
-                    This is the home for NHL Esports team The Black Jacks. We are an international team playing in the highest level league in Europe, ECL Elite. We also compete in Germany's National League GCL, which we have won four times. We've lifted the trophy in National cup tournament GCL Cup three times and also back in the day won the third highest level league in Europe ECL Lite title. The team consists of players from Germany, Austria, and Finland.  The tournaments are run by <a href="http://sportsgamer.gg/" class="text-light text-underline">SportsGamer.gg </a> 
+                    This is the home of NHL Esports team The Black Jacks, an international NHL Esports team. We compete in the highest level Europe, playing in the ECL Elite league. Additionally, we participate in Germany's National League, the GCL, where we have claimed the championship four times. We've also triumphed in the GCL Cup, winning the prestigious national tournament three times. In the past, we secured the ECL Lite title, the third-highest league in Europe. Our roster is composed of talented players from Germany, Austria, and Finland. All tournaments are organized by <a href="http://sportsgamer.gg/" class="text-light text-underline">SportsGamer.gg </a> 
                 </p>
             </div>
         </div>
@@ -123,13 +123,13 @@
                     <h4>Team</h4>
                     <ul>
                         <li>
-                            <a href="#" class="text-light">About us</a>
+                            <a href="index.html" class="text-light">About us</a>
                         </li>
                         <li>
-                            <a href="#" class="text-light">Roster</a>
+                            <a href="roster.html" class="text-light">Roster</a>
                         </li>
                         <li>
-                            <a href="#" class="text-light">News</a>
+                            <a href="news.html" class="text-light">News</a>
                         </li>
                     </ul>
                 </div>
@@ -137,7 +137,10 @@
                     <h4>Contact</h4>
                     <ul>
                         <li>
-                            <a href="#" class="text-light">Hit us on X private messages!</a>
+                            <a href="https://x.com/BlackJacksEASHL" class="text-light"> Put direct message on X</a>
+                        </li>
+                        <li>
+                            <a href="https://x.com/keuschemisch21" class="text-light"> Assistant Captain Kermit on X </a>
                         </li>
                     </ul>
                 </div>
